k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-panel-api
spec:
  selector:
    app: admin-panel-api
  ports:
    - port: 8080
      targetPort: 8080
