k8s/base/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-panel-mariadb
  labels:
    app: admin-panel-mariadb
spec:
  clusterIP: None
  selector:
    app: admin-panel-mariadb
  ports:
    - port: 3306
      targetPort: 3306
