k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-panel
spec:
  selector:
    app: admin-panel
  ports:
    - port: 80
      targetPort: 80
